# NewGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
game_objects/: Character.cpp  Character.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  PlayableCharacter.cpp  PlayableCharacter.h
input/: InputManager.cpp  InputManager.h
settings/: settings.h
